@startuml
title Figure 8. Rating, Dispute, and Notification Domain Classes
skinparam monochrome true
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam defaultFontSize 14
skinparam ArrowFontSize 12
skinparam nodesep 55
skinparam ranksep 65
class User
class Resource
class Booking
class ResourceRating {
  rating: 1..5
  comment: string?
}
class BookingDispute {
  reason: string
  status: DisputeStatus
  resolutionNotes: string?
}
class BookingDisputeEvent {
  eventType: DisputeEventType
  notes: string?
  evidence: JSON?
}
class Notification {
  type: string
  title: string
  message: string
  readAt: timestamp?
}
Booking "1" -- "0..1" ResourceRating
User "1" -- "0..*" ResourceRating
Resource "1" -- "0..*" ResourceRating
Booking "1" -- "0..1" BookingDispute
User "1 submitter" -- "0..*" BookingDispute
BookingDispute "1" -- "1..*" BookingDisputeEvent
User "1 actor" -- "0..*" BookingDisputeEvent
User "1 recipient" -- "0..*" Notification
@enduml



